[tool.poetry]
name = "roundtrip-roundtrip"
version = "0.1.0"
description = "Utilities for converting between LinkML schemas and sheets"
authors = ["Mark A. Miller <mamillerpa@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
linkml = "^1.1.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
